@@ -70,6 +70,7 @@ UNRELEASED
     * BREAKING CHANGE: .listIndexes(cb[, page]) => .listIndexes([page, cb]) #43
     * BREAKING CHANGE: client/index.addUserKeyWithValidity(acls, validity, maxQueriesPerIPPerHour, maxHitsPerQuery, cb) => client/index.addUserKeyWithValidity(acls, params, cb) where params = {validity:, maxQueriesPerIPPerHour:, maxHitsPerQuery:}
     * BREAKING CHANGE: client.sendQueriesBatch(cb, delay) => client.sendQueriesBatch(cb)
+    * BREAKING CHANGE: index.addObject(content, callback[, objectID]) => index.addObject(content[, callback, objectID])
 
 
 2015-02-03  2.9.2
